# penguin-rs

./: .clippy.toml  .codecov.yml  .gitignore  .gitmodules  Cargo.toml  Cross.toml  PROTOCOL.md  README.md  fail.pcapng  fail2.pcapng
.config/: mutants.toml  nextest.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: arm-releases.yml  clippy.yml  codspeed.yml  cross-releases.yml  devskim.yml  http01_helper_for_test.sh  macos-releases.yml  package.sh  pebble.sh  releases.yml  rust-build.yml  rust-test.yml  rust.yml  stress.sh  stress.yml  test-coverage.sh
async-acceptor/: Cargo.toml  README.md
async-acceptor/src/: async_acceptable.rs  lib.rs  stdio.rs
benches/: stream_throughput.rs
cow-bytes/: Cargo.toml  README.md
cow-bytes/src/: lib.rs  macros.rs  pbuf.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: frame_parser.rs  http_server_input.rs  http_server_input_tls.rs  remote_parser.rs  socket_input.rs
penguin/: Cargo.toml  main.rs
penguin-mux/: Cargo.toml
penguin-mux/benches/: stream_throughput.rs
penguin-mux/src/: config.rs  deadlock_detection.rs  dupe.rs  frame.rs  hashmap.rs  int_key.rs  lib.rs  loom.rs  stream.rs  task.rs  tests.rs  timing.rs  ws.rs
penguin-socks/: Cargo.toml  README.md
penguin-socks/src/: lib.rs  magics.rs  v4.rs  v5.rs
penguin/src/: arg.rs  config.rs  lib.rs  parse_remote.rs  tests.rs
penguin/src/arg/: backend_url.rs  bind_addr.rs  header.rs  mod.rs  remote_spec.rs  server_url.rs  url_common.rs
penguin/src/client/: maybe_retryable.rs  mod.rs  ws_connect.rs
penguin/src/client/handle_remote/: common.rs  http.rs  mod.rs  socks.rs  stdio.rs  tcp.rs  tproxy.rs  udp.rs
penguin/src/client/handle_remote/socks/: mod.rs  v4.rs
penguin/src/http/: body.rs  mod.rs  proxy.rs
penguin/src/server/: forwarder.rs  io_with_timeout.rs  mod.rs  service.rs  websocket.rs
penguin/src/server/acme/: challenge_helper.rs  mod.rs
penguin/src/tests/: mod.rs  tcptunnelchecker.rs
penguin/src/tls/: aws_lc_rs_chromium.rs  maybe_tls.rs  mod.rs  native.rs  rustls.rs
src/: arg.rs  backoff.rs  config.rs  dupe.rs  main.rs  mux.rs  parse_remote.rs  proto_version.rs  server.rs  test.rs  tests.rs  tls.rs  tls_none.rs
src/client/: backoff.rs  handle_remote.rs  handle_remote_socks.rs  handle_remote_tcp.rs  handle_remote_udp.rs  maybe_retryable.rs  mod.rs  mux.rs  parse_remote.rs  socks.rs  ws_connect.rs
src/client/handle_remote/: mod.rs  socks.rs  socks5.rs  tcp.rs  tproxy.rs  tproxy_stub.rs  udp.rs
src/client/handle_remote/socks/: mod.rs  v4.rs  v5.rs
src/mux/: client.rs  common_methods.rs  config.rs  dupe.rs  frame.rs  inner.rs  lib.rs  locked_sink.rs  loom.rs  mod.rs  proto_version.rs  server.rs  stream.rs  task.rs  test.rs  tests.rs  timing.rs  ws.rs
src/server/: acme.rs  backend_client.rs  backend_proxy.rs  forwarder.rs  io_with_timeout.rs  mod.rs  mux.rs  service.rs  socks.rs  tcp_forwarder.rs  udp_forwarder.rs  websocket.rs
src/server/acme/: challenge_helper.rs  mod.rs
src/server/forwarder/: mod.rs  tcp.rs  udp.rs
src/tls/: acceptor.rs  maybe_tls.rs  mod.rs  native.rs  rustls.rs
tools/: http01_helper  http01_socat_helper  penguin-v6.lua  penguin-v7.lua  rusty-penguin.service
