[workspace]
resolver = "3"
members = ["penguin-mux", "penguin"]
exclude = ["fuzz"]

[profile.release]
codegen-units = 1
lto = true

[profile.profile]
inherits = "release"
debug = true
strip = false
panic = "unwind"

[profile.release-size]
inherits = "release"
opt-level = "z"
debug = false
strip = true
codegen-units = 1
lto = true
panic = "abort"
