[workspace]
resolver = "3"
members = ["penguin-mux", "penguin", "async-acceptor", "penguin-socks"]
exclude = ["fuzz"]

[profile.release]
strip = true
codegen-units = 1
lto = true

[profile.profile]
inherits = "release"
debug = true
strip = false
panic = "unwind"

[profile.release-size]
inherits = "release"
opt-level = "z"
debug = false
strip = true
codegen-units = 1
lto = true
panic = "abort"

[workspace.metadata.cross.target.i686-pc-windows-gnu]
pre-build = ["apt-get update && apt-get -y install nasm"]

[workspace.metadata.cross.target.x86_64-unknown-linux-gnu]
pre-build = ["apt-get update && apt-get -y install gcc-10 && update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-10 100"]
