[package]
name = "async-acceptor"
version = "0.1.0"
authors = ["Zhang Maiyun <me@maiyun.me>"]
edition = "2024"
description = "Abstraction over tokio async listeners with an accept() method"
readme = "README.md"
repository = "https://github.com/myzhang1029/penguin-rs"
license = "Apache-2.0 OR GPL-3.0-or-later"
keywords = ["async", "listener", "tokio"]
categories = ["asynchronous"]

[dependencies]
futures-util = { version = "0.3", default-features = false }
tokio = "^1, >=1.23.1"

[dev-dependencies]
async-acceptor = { path = ".", features = ["__dev-dependencies"] }

[features]
default = ["tokio-net", "stdio"]
tokio-net = ["tokio/net"]
stdio = ["tokio/io-std"]

__dev-dependencies = ["tokio/io-util", "tokio/macros", "tokio/process", "tokio/rt-multi-thread"]
