[package]
name = "cow-bytes"
version = "0.1.0"
authors = ["Zhang Maiyun <me@maiyun.me>"]
edition = "2024"
description = "A `Cow`-like wrapper for `Bytes` that can be either borrowed or owned."
readme = "README.md"
repository = "https://github.com/myzhang1029/penguin-rs"
license = "Apache-2.0 OR GPL-3.0-or-later"
keywords = ["buffers", "zero-copy", "io"]
categories = ["network-programming", "data-structures"]


[dependencies]
bytes = { version = "^1, >=1.11.1", default-features = false }
derive_more = { version = "2", default-features = false, features = ["from", "is_variant"] }
[features]
default = ["std"]
std = ["bytes/std", "derive_more/std"]
