[package]
name = "rusty-penguin-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
bytes = "1"
libfuzzer-sys = "0.4"
tokio = { version = "^1, >=1.23.1", features = ["io-util"] }
tokio-tungstenite = { version = "0.26", default-features = false }

[dependencies.rusty-penguin]
path = ".."

[[bin]]
name = "frame_parser"
path = "fuzz_targets/frame_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "socket_input"
path = "fuzz_targets/socket_input.rs"
test = false
doc = false
bench = false
