[package]
name = "rusty-penguin-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
bytes = "^1, >=1.11.1"
libfuzzer-sys = "0.4"
penguin-mux = { version = "0.8", path = "../penguin-mux", features = ["tungstenite"] }
tokio = { version = "^1, >=1.23.1", features = ["io-util"] }
tokio-tungstenite = { version = "0.28", default-features = false }

[[bin]]
name = "frame_parser"
path = "fuzz_targets/frame_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "socket_input"
path = "fuzz_targets/socket_input.rs"
test = false
doc = false
bench = false
