[package]
name = "penguin-mux"
version = "0.8.4"
authors = ["Zhang Maiyun <me@maiyun.me>"]
edition = "2024"
description = "TCP/UDP multiplexing over HTTP WebSocket"
readme = "README.md"
repository = "https://github.com/myzhang1029/penguin-rs"
license = "Apache-2.0 OR GPL-3.0-or-later"
keywords = ["web", "websocket"]
categories = ["asynchronous", "network-programming", "web-programming::websocket", "web-programming::http-server"]

[[bench]]
name = "stream_throughput"
harness = false
required-features = ["tungstenite"]

[lib]
name = "penguin_mux"
path = "src/lib.rs"

[dependencies]
bytes = { version = "^1, >=1.11.1", default-features = false }
cow-bytes = { path = "../cow-bytes", default-features = false }
derive_more = { version = "2", features = ["debug", "deref", "from", "into"], default-features = false }
futures-util = { version = "0.3", default-features = false }
hashbrown = { version = "0.17", features = ["default-hasher"], default-features = false }
nohash-hasher = { version = "0.2", default-features = false , optional = true }
parking_lot = { version = "0.12", optional = true }
rand = { version = "0.10", default-features = false }
spin = { version = "0.12", features = ["use_ticket_mutex", "rwlock", "lock_api"], default-features = false }
thiserror = { version = "2", default-features = false }
tokio = { version = "^1, >=1.23.1", features = ["io-util", "macros", "parking_lot", "sync", "time"] }
tokio-tungstenite = { version = "0.29", default-features = false, optional = true }
tracing = { version = "0.1", features = ["attributes"], default-features = false }

[dev-dependencies]
divan = "0.1"
penguin-mux = { path = ".", default-features = false, features = ["__dev-dependencies"] }
tracing-subscriber = { version = "^0.3, >=0.3.20", features = ["env-filter"] }

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7", features = ["checkpoint", "futures"] }

[features]
default = ["std", "tungstenite", "rt-tokio"]
std = ["rand/thread_rng", "dep:parking_lot"]
# Expect the tokio runtime to be available
rt-tokio = ["tokio/rt"]
# use tungstenite as the WebSocket implementation
tungstenite = ["dep:tokio-tungstenite"]
# Use nohash-hasher for flow_id hashmaps
nohash = ["dep:nohash-hasher"]
# Facility to launch `parking_lot`'s deadlock detection in a separate thread in tests
deadlock-detection = ["std", "parking_lot/deadlock_detection"]

__dev-dependencies = ["rt-tokio", "tokio/macros", "tokio/net", "tokio/rt-multi-thread"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)', 'cfg(loom)'] }
