[package]
name = "penguin-socks"
version = "0.1.0"
authors = ["Zhang Maiyun <me@maiyun.me>"]
edition = "2024"
description = "SOCKS4/5 protocol implementation."
readme = "README.md"
repository = "https://github.com/myzhang1029/penguin-rs"
license = "Apache-2.0 OR GPL-3.0-or-later"
keywords = ["async", "socks", "socks4", "socks5"]
categories = ["network-programming"]

[dependencies]
bytes = "^1, >=1.11.1"
thiserror = "2"
tokio = { version = "^1, >=1.23.1", features = ["io-util"] }

[dev-dependencies]
penguin-socks = { path = ".", features = ["__dev-dependencies"] }

[features]
__dev-dependencies = ["tokio/macros", "tokio/rt-multi-thread"]
